tests/fixtures/valid/multi/pub_import_reexport_selective/src/middle/leaf.gcl
// leaf.gcl -- the original owner of `g0`.
pub dim GravityAccel = Length / Time^2;
pub const node g0: GravityAccel = 9.80665 m/s^2;
