tests/fixtures/invalid/multi/bare_import_mixed/src/nasa/constants.gcl
pub dim Acceleration = Length / Time^2;
pub const node g0: Acceleration = 9.80665 m/s^2;
